Create ui for forms and updated preloader

--- a/markups/home.html
+++ b/markups/home.html
@@ -41,6 +41,7 @@
                 </div>
             </section>
             <section class="products">
+                Loading ....
             </section>
         </main>
         <div id="overlay"></div>
@@ -53,6 +54,7 @@
                     <div class="title">CART</div>
                 </div>
                 <div class="cart-products">
+                    Loading ...
                 </div>
             </div>
         </section>
@@ -62,6 +64,7 @@
                     <i class="fas fa-arrow-left"></i><span>Close</span>
                 </div>
                 <div class="title">USER INFORMATION</div>
+                <span class="remove">Loading ...</span>
             </div>
         </aside>
     </div>
